--- a/app/expenses/templates/expenses/bills.html
+++ b/app/expenses/templates/expenses/bills.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Money Manager</title>
+    <title>Bills expenses</title>
 </head>
-
 <body>
     <header>
-        <h1>Money Manager</h1>
-        <p>Manage your finances effortlessly</p>
+        <h1>Money Manager - Bills</h1>
+        <p>Manage your food expenses effortlessly</p>
         <div>
             <a href="{% url 'logout' %}">Log Out</a>
         </div>
     </header>
     <nav>
         <ul>
-            <li><a>Home</a></li>
+            <li><a href="{% url 'mainPage' %}">Home</a></li>
             <li>
                 <a>Expenses</a>
                 <ul>
@@ -33,6 +32,18 @@
             <li><a href="{% url 'account' %}">Account</a></li>
         </ul>
     </nav>
+    <main>
+        <h2>Add bills what you have already paid or what you are going to pay.</h2>
+        <form method="post">
+            {% csrf_token %}
+            <label for="date">Add Date:</label>
+            <input type="date" id="date" name="date"><br>
+            <label for="fee">Add what you intend to pay:</label>
+            <input type="text" id="fee" name="fee"><br>
+            <label for="price">Add Cost:</label>
+            <input type="number" id="price" name="price" step="0.01"><br>
+            <button type="submit">Add Record</button>
+        </form>
+    </main>
 </body>
-
 </html>
