Added manager and pdf

--- a/app/account/templates/account/account.html
+++ b/app/account/templates/account/account.html
@@ -24,8 +24,8 @@
             <li>
                 <a>Manager</a>
                 <ul>
-                    <li><a>Check your expenses</a></li>
-                    <li><a>Check how much you have saved</a></li>
+                    <li><a href="{% url 'expenses_manager' %}">Check your expenses</a></li>
+                    <li><a href="{% url 'savings_manager' %}">Check how much you have saved</a></li>
                 </ul>
             </li>
             <li><a href="{% url 'account' %}">Account</a></li>
