--- a/app/account/templates/account/account.html
+++ b/app/account/templates/account/account.html
@@ -29,10 +29,19 @@
                 </ul>
             </li>
             <li><a href="{% url 'account' %}">Account</a></li>
+            <li>
+                <a>Money Box</a>
+                <ul>
+                    <li><a href="{% url 'transfer_to_savings' %}">Transfer money to money box</a></li>
+                    <li><a href="{% url 'set_savings_goal' %}">Set a savings goal</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
+    <h1>------------------------------------------------------------------------</h1>
     <main>
-        <h2>Your Balance: ${{ total_balance }}</h2>
+        <h2>Your Balance: {{ total_balance }} {{ currency }}</h2>
+        <h3>You can add the cash flows you received into your account.</h3>
         <form method="POST">
             {% csrf_token %}
             <label for="added_funds">Amount:</label>
