--- a/app/manager/templates/manager/expenses_manager.html
+++ b/app/manager/templates/manager/expenses_manager.html
@@ -30,6 +30,13 @@
                 </ul>
             </li>
             <li><a href="{% url 'account' %}">Account</a></li>
+            <li>
+                <a>Money Box</a>
+                <ul>
+                    <li><a href="{% url 'transfer_to_savings' %}">Transfer money to money box</a></li>
+                    <li><a href="{% url 'set_savings_goal' %}">Set a savings goal</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
     <h1>------------------------------------------------------------------------</h1>
