Added handling csv files

--- a/app/user/templates/user/mainPage.html
+++ b/app/user/templates/user/mainPage.html
@@ -21,6 +21,7 @@
                     <li><a href="{% url 'bills' %}">Bills</a></li>
                     <li><a href="{% url 'daily_buy' %}">Daily Buy</a></li>
                     <li><a href="{% url 'random_expenses' %}">Random Expenses</a></li>
+                    <li><a href="{% url 'upload-from-file' %}">Upload your expenses from file</a></li>
                 </ul>
             </li>
             <li>
