--- a/app/manager/templates/manager/upload_expenses_from_csv_file.html
+++ b/app/manager/templates/manager/upload_expenses_from_csv_file.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Account</title>
+    <title>Expenses</title>
 </head>
 <body>
     <header>
-        <h1>Money Manager - Account</h1>
+        <h1>Money Manager - Summary of Expenses</h1>
+        <p>Manage your food expenses effortlessly</p>
         <div>
             <a href="{% url 'logout' %}" class="logout-button">Log Out</a>
         </div>
@@ -41,21 +42,17 @@
     </nav>
     <h1>------------------------------------------------------------------------</h1>
     <main>
-        <h2>Your Balance: {{ total_balance }} {{ currency }}</h2>
-        <h3>You can add the cash flows you received into your account.</h3>
-        <form method="POST">
+        <h1>Import Expenses from CSV</h1>
+
+        <form action="{% url 'upload-from-file' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <label for="added_funds">Amount:</label>
-            <input type="number" id="added_funds" name="added_funds" required>
+            
+            <label for="csv_file">Wybierz plik CSV:</label>
+            <input type="file" id="csv_file" name="csv_file" accept=".csv" required>
+            
+            <br><br>
 
-            <label for="source">Source:</label>
-            <input type="text" id="source" name="source" required>
-
-            <label for="date">Date:</label>
-            <input type="date" id="date" name="date" required>
-
-            <button type="submit">Add Money</button>
-            <li><a href="{% url 'show_deposit' %}">If you what to check your deposite click here!</a></li>
+            <button type="submit">Importuj wydatki</button>
         </form>
     </main>
 </body>
